--- a/appTest/src/androidTest/AndroidManifest.xml
+++ b/appTest/src/androidTest/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <activity
-                android:name=".TestActivity"
+                android:name="com.movies.test.TestActivity"
                 android:exported="false"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
